# cloud_logging_agent

./: .env.example  .gitignore  Pyproject.toml  README.md  main.py  pyproject.toml  run.py
cloud_logging_agent/: agent.py
